// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-form Renders \`pbehavior-form\` with custom props 1`] = `
<div
  class="v-tabs v-tabs--centered v-tabs--fixed-tabs theme--light"
>
  <div
    class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
    General
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Patterns
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 column"
          >
            <pbehavior-general-form-stub
              form="[object Object]"
              noenabled="true"
              withstartontrigger="true"
            />
            <c-enabled-color-picker-field-stub
              label="Use special color for this event?"
            />
            <c-collapse-panel-stub
              class="mb-2"
              title="Recurrence rule"
            >
              <recurrence-rule-form-stub
                rrule=""
              />
              <pbehavior-recurrence-rule-exceptions-field-stub
                class="mt-2"
                exceptions=""
                exdates=""
                withexdatetype="true"
              />
            </c-collapse-panel-stub>
            <!---->
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 justify-center"
          >
            <div
              class="flex xs12"
            >
              <pbehavior-patterns-form-stub
                form="[object Object]"
              />
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`pbehavior-form Renders \`pbehavior-form\` with required props 1`] = `
<div
  class="v-tabs v-tabs--centered v-tabs--fixed-tabs theme--light"
>
  <div
    class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
    role="tablist"
  >
    <div
      class="v-slide-group__prev v-slide-group__prev--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
    <div
      class="v-slide-group__wrapper"
    >
      <div
        class="v-slide-group__content v-tabs-bar__content"
      >
        <div
          class="v-tabs-slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs-slider primary"
          />
        </div>
        <div
          aria-selected="true"
          class="v-tab v-tab--active"
          role="tab"
          tabindex="0"
        >
    General
        </div>
        <div
          aria-selected="false"
          class="v-tab"
          role="tab"
          tabindex="0"
        >
    Patterns
        </div>
      </div>
    </div>
    <div
      class="v-slide-group__next v-slide-group__next--disabled"
    >
      <transition-stub
        name="fade-transition"
      />
    </div>
  </div>
  <div
    class="v-window v-item-group theme--light v-tabs-items"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 column"
          >
            <pbehavior-general-form-stub
              form="[object Object]"
            />
            <c-enabled-color-picker-field-stub
              label="Use special color for this event?"
            />
            <c-collapse-panel-stub
              class="mb-2"
              title="Recurrence rule"
            >
              <recurrence-rule-form-stub
                rrule=""
              />
              <pbehavior-recurrence-rule-exceptions-field-stub
                class="mt-2"
                exceptions=""
                exdates=""
                withexdatetype="true"
              />
            </c-collapse-panel-stub>
            <c-collapse-panel-stub
              class="mt-2"
              title="Comments"
            >
              <pbehavior-comments-field-stub
                comments=""
              />
            </c-collapse-panel-stub>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 justify-center"
          >
            <div
              class="flex xs12"
            >
              <pbehavior-patterns-form-stub
                form="[object Object]"
              />
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
